--- a/.editorconfig
+++ b/.editorconfig
@@ -8,18 +8,21 @@ root = true
 # defaults
 [*]
 end_of_line = lf
-insert_final_newline = false
-
-# 4 space indentation
-[*.{ini,py,rst,js,html,css}]
-indent_style = space
-indent_size = 4
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 120
-
-# and travis does its own thing
-[*.yml]
 indent_style = space
+
+# 4 space indentation
+[*.{ini,py,rst}]
+indent_size = 4
+
+# 2 space indentation
+[*.{js,html,css, yml}]
 indent_size = 2
-trim_trailing_whitespace = true
+
+# Markdown documents special treatment
+[*.md]
+trim_trailing_whitespace = false
+indent_size = 4
